[package]
name = "asynq"
version = "0.1.0"
authors = ["Ushitora Anqou <ushitora@anqou.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
