[package]
name = "asynq"
version = "0.1.0"
authors = ["Ushitora Anqou <ushitora@anqou.net>", "Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
async-trait = "0.1.35"
chrono = "0.4.11"
uuid = { version = "0.8", features = ["v4"] }
